<resources>
    <string name="app_name">Grinding Machine</string>
    <string name="connected_status">Connected</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="battery_level">Battery level:</string>
    <string name="battery_charge_0">0%</string>
    <string name="current_speed">Current speed:</string>
    <string name="motor_speed">1000 rpm</string>
    <string name="rpm">RPM</string>
    <string name="set_speed">Set speed</string>
    <string name="bt_not_enabled_leaving">Bluetooth not enabled. Please enable and retry!</string>
    <string name="none_paired">No device paired!</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect to.</string>
    <string name="none_found">No devices found!</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="set_speed_automatically_summary">Turn on to send speed value automatically to the grinding machine</string>
    <string name="set_speed_automatically_title">Set speed automatically</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minimum_speed_pref_summary">Minimum value for the rpm of the motor when in operation.</string>
    <string name="minimum_rpm_pref_title">Minimum RPM</string>
    <string name="maximum_speed_pref_summary">Maximum value for the rpm of the motor when in operation.</string>
    <string name="maximum_speed_pref_title">Maximum RPM</string>
    <string name="title_activity_speed_profiles">SpeedProfilesActivity</string>
    <string name="load">Load</string>
    <string name="selected_speed_profile_toast">Selected speed profile </string>
    <string name="save">Save</string>
    <string name="_500">500</string>
    <string name="bt_activated">Bluetooth activated!</string>
    <string name="new_speed_profile">New speed profile</string>
    <string name="edit_speed_profile">Edit speed profile</string>
    <string name="stop">STOP</string>
</resources>
