<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="715dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/connection_status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/battery_charge_layout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/connection_status_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/connected_status"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="25dp"></TextView>

            <Button
                android:id="@+id/bluetooth_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:text="@string/button_disconnect"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20dp"
                android:theme="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/battery_charge_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/current_speed_layout"
            app:layout_constraintTop_toBottomOf="@+id/connection_status_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/battery_level"
                android:textSize="25dp"></TextView>

            <TextView
                android:id="@+id/battery_percentage_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="80dp"
                android:text="@string/battery_charge_0"
                android:textSize="25dp"></TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/current_speed_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/set_speed_layout"
            app:layout_constraintTop_toBottomOf="@+id/battery_charge_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/current_speed"
                android:textSize="25dp"></TextView>

            <TextView
                android:id="@+id/current_motor_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="50dp"
                android:text="@string/motor_speed"
                android:textSize="25dp"></TextView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/set_speed_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/set_speed_text_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_speed_layout">

            <com.example.grindingmachine.DigitListView
                android:id="@+id/hundreds_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <com.example.grindingmachine.DigitListView
                android:id="@+id/tens_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <com.example.grindingmachine.DigitListView
                android:id="@+id/units_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/set_speed_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_speed_layout">

            <EditText
                android:id="@+id/rpm_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="70dp"
                android:hint="500"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/rpm_edit_text"
                android:text="@string/rpm"
                android:textSize="30dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rpm_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Set speed"
                android:textSize="20dp"
                android:theme="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>